Display the value of List-Id, Message-Id, and Subject

--- a/template/standard/element/div-result.html
+++ b/template/standard/element/div-result.html
@@ -135,6 +135,24 @@
 					</tr>
 
 					<tr>
+						<td class = 'key'>[% tt_term.subject %]</td>
+						<td class = 'value'>[% B.subject %]</td>
+						<td class = 'extra'></td>
+					</tr>
+
+					<tr>
+						<td class = 'key'>[% tt_term.messageid %]</td>
+						<td class = 'value'>[% B.messageid %]</td>
+						<td class = 'extra'></td>
+					</tr>
+
+					<tr>
+						<td class = 'key'>[% tt_term.listid %]</td>
+						<td class = 'value'>[% B.listid %]</td>
+						<td class = 'extra'></td>
+					</tr>
+
+					<tr>
 						<td class = 'key'>[% tt_term.token %](MD5)</td>
 						<td class = 'value'>
 							<input type = 'text' class = 'selectable' 
